libyasm/expr.h


typedef enum yasm_expr__type {
    YASM_EXPR_NONE = 0,     
    YASM_EXPR_REG = 1<<0,   
    YASM_EXPR_INT = 1<<1,   
    YASM_EXPR_SUBST = 1<<2, 
    YASM_EXPR_FLOAT = 1<<3, 
    YASM_EXPR_SYM = 1<<4,   
    YASM_EXPR_PRECBC = 1<<5,
    YASM_EXPR_EXPR = 1<<6   
} yasm_expr__type;
typedef struct yasm_expr__item {
    yasm_expr__type type;   
    union {
        yasm_bytecode *precbc;  
        yasm_symrec *sym;       
        yasm_expr *expn;        
        yasm_intnum *intn;      
        yasm_floatnum *flt;     
        uintptr_t reg;          
        unsigned int subst;     
    } data;
} yasm_expr__item;
struct yasm_expr {
    yasm_expr_op op;    
    unsigned long line; 
    int numterms;       
    yasm_expr__item terms[2];
};
YASM_LIB_DECL
 yasm_expr *yasm_expr_create
    (yasm_expr_op op,  yasm_expr__item *a,
       yasm_expr__item *b, unsigned long line);
YASM_LIB_DECL
 yasm_expr__item *yasm_expr_sym( yasm_symrec *sym);
YASM_LIB_DECL
 yasm_expr__item *yasm_expr_expr( yasm_expr *e);
YASM_LIB_DECL
 yasm_expr__item *yasm_expr_int( yasm_intnum *intn);
YASM_LIB_DECL
 yasm_expr__item *yasm_expr_float( yasm_floatnum *flt);
YASM_LIB_DECL
 yasm_expr__item *yasm_expr_reg(uintptr_t reg);
yasm_expr *yasm_expr_copy(const yasm_expr *e);
#define yasm_expr_copy(e)   yasm_expr__copy_except(e, -1)
YASM_LIB_DECL
void yasm_expr_destroy(  yasm_expr *e);
YASM_LIB_DECL
int yasm_expr_is_op(const yasm_expr *e, yasm_expr_op op);
typedef  yasm_expr * (*yasm_expr_xform_func)
    (  yasm_expr *e,  void *d);
YASM_LIB_DECL
  yasm_expr *yasm_expr__level_tree
    (   yasm_expr *e, int fold_const,
     int simplify_ident, int simplify_reg_mul, int calc_bc_dist,
      yasm_expr_xform_func expr_xform_extra,
      void *expr_xform_extra_data);
YASM_LIB_DECL
  yasm_expr *yasm_expr_extract_segoff(yasm_expr **ep);
YASM_LIB_DECL
  yasm_expr *yasm_expr_extract_wrt(yasm_expr **ep);
YASM_LIB_DECL
  yasm_intnum *yasm_expr_get_intnum
    (yasm_expr **ep, int calc_bc_dist);
YASM_LIB_DECL
  const yasm_symrec *yasm_expr_get_symrec
    (yasm_expr **ep, int simplify);
YASM_LIB_DECL
  const uintptr_t *yasm_expr_get_reg
    (yasm_expr **ep, int simplify);
YASM_LIB_DECL
void yasm_expr_print( const yasm_expr *e, FILE *f);
YASM_LIB_DECL
int yasm_expr__traverse_leaves_in_const
    (const yasm_expr *e,  void *d,
     int (*func) ( const yasm_expr__item *ei,  void *d));
YASM_LIB_DECL
int yasm_expr__traverse_leaves_in
    (yasm_expr *e,  void *d,
     int (*func) ( yasm_expr__item *ei,  void *d));
YASM_LIB_DECL
int yasm_expr__bc_dist_subst(yasm_expr **ep, void *cbd,
                             void (*callback) (unsigned int subst,
                                               yasm_bytecode *precbc,
                                               yasm_bytecode *precbc2,
                                               void *cbd));