libyasm/symrec.h


typedef enum yasm_sym_vis {
    YASM_SYM_LOCAL = 0,         
    YASM_SYM_GLOBAL = 1 << 0,   
    YASM_SYM_COMMON = 1 << 1,   
    YASM_SYM_EXTERN = 1 << 2,   
    YASM_SYM_DLOCAL = 1 << 3    
} yasm_sym_vis;
YASM_LIB_DECL
yasm_symtab *yasm_symtab_create(void);
YASM_LIB_DECL
void yasm_symtab_destroy( yasm_symtab *symtab);
YASM_LIB_DECL
 yasm_symrec *yasm_symtab_use
    (yasm_symtab *symtab, const char *name, unsigned long line);
YASM_LIB_DECL
  yasm_symrec *yasm_symtab_get
    (yasm_symtab *symtab, const char *name);
YASM_LIB_DECL
 yasm_symrec *yasm_symtab_define_equ
    (yasm_symtab *symtab, const char *name,  yasm_expr *e,
     unsigned long line);
YASM_LIB_DECL
 yasm_symrec *yasm_symtab_define_label
    (yasm_symtab *symtab, const char *name,
      yasm_bytecode *precbc, int in_table, unsigned long line);
YASM_LIB_DECL
 yasm_symrec *yasm_symtab_define_special
    (yasm_symtab *symtab, const char *name, yasm_sym_vis vis);
YASM_LIB_DECL
 yasm_symrec *yasm_symtab_declare
    (yasm_symtab *symtab, const char *name, yasm_sym_vis vis,
     unsigned long line);
YASM_LIB_DECL
void yasm_symrec_declare(yasm_symrec *symrec, yasm_sym_vis vis,
                         unsigned long line);
typedef int (*yasm_symtab_traverse_callback)
    (yasm_symrec *sym,  void *d);
YASM_LIB_DECL
int  yasm_symtab_traverse
    (yasm_symtab *symtab,  void *d,
     yasm_symtab_traverse_callback func);
YASM_LIB_DECL
void yasm_symtab_parser_finalize(yasm_symtab *symtab, int undef_extern,
                                 yasm_errwarns *errwarns);
YASM_LIB_DECL
void yasm_symtab_print(yasm_symtab *symtab, FILE *f, int indent_level);
typedef  yasm_bytecode *yasm_symrec_get_label_bytecodep;