tools/python-yasm/yasm.pyx

cdef extern struct FILE:
    int fileno

ctypedef unsigned int size_t

cdef extern from "libyasm.h":

    # libyasm/coretype.h
    cdef struct yasm_arch
    cdef struct yasm_preproc
    cdef struct yasm_parser
    cdef struct yasm_optimizer
    cdef struct yasm_objfmt
    cdef struct yasm_dbgfmt
    cdef struct yasm_listfmt
    cdef struct yasm_assoc_data_callback
    cdef struct yasm_bytecode
    cdef struct yasm_object
    cdef struct yasm_section
    cdef struct yasm_symtab
    cdef struct yasm_symrec
    cdef struct yasm_expr
    cdef struct yasm_intnum
    cdef struct yasm_floatnum
    cdef struct yasm_linemap
    cdef struct yasm_valparam
    cdef struct yasm_valparamhead
    cdef struct yasm_insn_operands

    ctypedef yasm_intnum*(*yasm_calc_bc_dist_func)(yasm_bytecode *precbc1,
            yasm_bytecode *precbc2)
    ctypedef int*(*yasm_output_expr_func)(yasm_expr **ep, unsigned char
            *buf, size_t destsize, size_t valsize, int shift, unsigned
            long offset, yasm_bytecode *bc, int rel, int warn, void *d)
    ctypedef int(*yasm_output_reloc_func)(yasm_symrec *sym,
            yasm_bytecode *bc, unsigned char *buf, size_t destsize,
            size_t valsize, int warn, void *d)

    ctypedef enum yasm_expr_op:
        YASM_EXPR_IDENT
        YASM_EXPR_ADD
        YASM_EXPR_SUB
        YASM_EXPR_MUL
        YASM_EXPR_DIV
        YASM_EXPR_SIGNDIV
        YASM_EXPR_MOD
        YASM_EXPR_SIGNMOD
        YASM_EXPR_NEG
        YASM_EXPR_NOT
        YASM_EXPR_OR
        YASM_EXPR_AND
        YASM_EXPR_XOR
        YASM_EXPR_NOR
        YASM_EXPR_SHL
        YASM_EXPR_SHR
        YASM_EXPR_LOR
        YASM_EXPR_LAND
        YASM_EXPR_LNOT
        YASM_EXPR_LT
        YASM_EXPR_GT
        YASM_EXPR_EQ
        YASM_EXPR_LE
        YASM_EXPR_GE
        YASM_EXPR_NE
        YASM_EXPR_NONNUM
        YASM_EXPR_SEG
        YASM_EXPR_WRT
        YASM_EXPR_SEGOFF

    ctypedef enum yasm_sym_vis:
        YASM_SYM_LOCAL
        YASM_SYM_GLOBAL
        YASM_SYM_COMMON
        YASM_SYM_EXTERN
        YASM_SYM_DLOCAL

    # libyasm/expr.h
    cdef enum yasm_symrec_relocate_action:
        ReplaceZero = 0
        ReplaceValue = 1
        ReplaceValueIfLocal = 2

    cdef struct yasm_expr
    cdef struct yasm__exprhead
    cdef struct yasm_expr__item
    ctypedef yasm_expr* (*yasm_expr_xform_func)(yasm_expr *e, void *d)

    cdef yasm_expr* yasm_expr_create(yasm_expr_op op, yasm_expr__item *a,
            yasm_expr__item *b, size_t line)
    cdef yasm_expr__item* yasm_expr_sym(yasm_symrec *sym)
    cdef yasm_expr__item* yasm_expr_expr(yasm_expr *expr)
    cdef yasm_expr__item* yasm_expr_int(yasm_intnum *intn)
    cdef yasm_expr__item* yasm_expr_float(yasm_floatnum *flt)
    cdef yasm_expr__item* yasm_expr_reg(size_t reg)
    cdef yasm_expr* yasm_expr_copy(yasm_expr *e)
    cdef void yasm_expr_destroy(yasm_expr *e)
    cdef int yasm_expr_is_op(yasm_expr *e, yasm_expr_op)
    cdef yasm_expr* yasm_expr__level_tree(yasm_expr *e, int fold_const,
            int_simplify_ident, yasm_calc_bc_dist_func calc_bc_dist,
            yasm_expr_xform_func expr_form_extra, void
            *expr_xform_extra_data, yasm__exprhead *eh)
    cdef yasm_symrec* yasm_expr_extract_symrec(yasm_expr **ep,
            yasm_symrec_relocate_action relocate_action,
            yasm_calc_bc_dist_func calc_bc_dist)
    cdef yasm_expr* yasm_expr_extract_seg(yasm_expr **ep)
    cdef yasm_expr* yasm_expr_extract_segoff(yasm_expr **ep)
    cdef yasm_expr* yasm_expr_extract_wrt(yasm_expr **ep)
    cdef yasm_expr* yasm_expr_extract_shr(yasm_expr **ep)
    cdef yasm_intnum* yasm_expr_get_intnum(yasm_expr **ep)
    cdef yasm_floatnum* yasm_expr_get_floatnum(yasm_expr **ep)
    cdef yasm_symrec* yasm_expr_get_symrec(yasm_expr **ep, int simplify)
    cdef size_t* yasm_expr_get_reg(yasm_expr **ep, int simplify)
    cdef void yasm_expr_print(yasm_expr *e, FILE *f)

    # libyasm/bytecode.h
    cdef struct yasm_effaddr
    cdef struct yasm_immval
    cdef struct yasm_dataval
    cdef struct yasm_datavalhead

    cdef enum yasm_bc_resolve_flags:
        ResolveNone = 0
        ResolveError = 1 << 0
        ResolveMinLen = 1 << 1
        ResolveUnknownLen = 1 << 2

    cdef yasm_immval* yasm_imm_create_int(size_t int_val,
            size_t line)
    cdef yasm_immval* yasm_imm_create_expr(yasm_expr *e)
    cdef yasm_expr* yasm_ea_get_disp(yasm_effaddr *ea)
    cdef void yasm_ea_set_len(yasm_effaddr *ea, unsigned int len)
    cdef void yasm_ea_set_nosplit(yasm_effaddr *ea, unsigned int nosplit)
    cdef void yasm_ea_set_strong(yasm_effaddr *ea, unsigned int strong)
    cdef void yasm_ea_set_segreg(yasm_effaddr *ea, size_t segreg,
            size_t line)
    cdef void yasm_ea_destroy(yasm_effaddr *ea)
    cdef void yasm_ea_print(yasm_effaddr *ea, FILE *f, int indent_level)

    cdef void yasm_bc_set_multiple(yasm_bytecode *bc, yasm_expr *e)
    cdef yasm_bytecode* yasm_bc_create_data(yasm_datavalhead *datahead,
            unsigned int size, int append_zero, size_t line)
    cdef yasm_bytecode* yasm_bc_create_leb128(yasm_datavalhead *datahead,
            int sign, size_t line)
    cdef yasm_bytecode* yasm_bc_create_reserve(yasm_expr *numitems,
            unsigned int itemsize, size_t line)
    cdef yasm_bytecode* yasm_bc_create_incbin(char *filename,
            yasm_expr *start, yasm_expr *maxlen, size_t line)
    cdef yasm_bytecode* yasm_bc_create_align(yasm_expr *boundary,
            yasm_expr *fill, yasm_expr *maxskip,
            unsigned char **code_fill, size_t line)
    cdef yasm_bytecode* yasm_bc_create_org(size_t start,
            size_t line)
    cdef yasm_bytecode* yasm_bc_create_insn(yasm_arch *arch,
            size_t insn_data[4], int num_operands,
            yasm_insn_operands *operands, size_t line)
    cdef yasm_bytecode* yasm_bc_create_empty_insn(yasm_arch *arch,
            size_t insn_data[4], int num_operands,
            yasm_insn_operands *operands, size_t line)
    cdef void yasm_bc_insn_add_prefix(yasm_bytecode *bc,
            size_t prefix_data[4])
    cdef void yasm_bc_insn_add_seg_prefix(yasm_bytecode *bc,
            size_t segreg)
    cdef yasm_section* yasm_bc_get_section(yasm_bytecode *bc)
    cdef void yasm_bc_destroy(yasm_bytecode *bc)
    cdef void yasm_bc_print(yasm_bytecode *bc, FILE *f, int indent_level)
    cdef void yasm_bc_finalize(yasm_bytecode *bc, yasm_bytecode *prev_bc)
    cdef yasm_intnum *yasm_common_calc_bc_dist(yasm_bytecode *precbc1,
            yasm_bytecode *precbc2)
    cdef yasm_bc_resolve_flags yasm_bc_resolve(yasm_bytecode *bc, int save,
            yasm_calc_bc_dist_func calc_bc_dist)
    cdef unsigned char* yasm_bc_tobytes(yasm_bytecode *bc,
            unsigned char *buf, size_t *bufsize,
            size_t *multiple, int *gap, void *d,
            yasm_output_expr_func output_expr,
            yasm_output_reloc_func output_reloc)

    cdef yasm_dataval* yasm_dv_create_expr(yasm_expr *expn)
    cdef yasm_dataval* yasm_dv_create_string(char *contents, size_t len)

    cdef void yasm_dvs_initialize(yasm_datavalhead *headp)
    cdef void yasm_dvs_destroy(yasm_datavalhead *headp)
    cdef yasm_dataval* yasm_dvs_append(yasm_datavalhead *headp,
            yasm_dataval *dv)
    cdef void yasm_dvs_print(yasm_datavalhead *headp, FILE *f,
            int indent_level)

    # libyasm/intnum.h
    cdef void BitVector_Boot()
    cdef void BitVector_Shutdown()
    cdef void yasm_intnum_initialize()
    cdef void yasm_intnum_cleanup()
    cdef yasm_intnum* yasm_intnum_create_dec(char *str, size_t line)
    cdef yasm_intnum* yasm_intnum_create_bin(char *str, size_t line)
    cdef yasm_intnum* yasm_intnum_create_oct(char *str, size_t line)
    cdef yasm_intnum* yasm_intnum_create_hex(char *str, size_t line)
    cdef yasm_intnum* yasm_intnum_create_charconst_nasm(char *str, size_t line)
    cdef yasm_intnum* yasm_intnum_create_uint(unsigned int i)
    cdef yasm_intnum* yasm_intnum_create_int(int i)
    cdef yasm_intnum* yasm_intnum_copy(yasm_intnum *intn)
    cdef void yasm_intnum_destroy(yasm_intnum *intn)
    cdef void yasm_intnum_calc(yasm_intnum *acc, yasm_expr_op op,
            yasm_intnum *operand, size_t line)
    cdef void yasm_intnum_zero(yasm_intnum *intn)
    cdef void yasm_intnum_set_uint(yasm_intnum *intn, unsigned int val)
    cdef int yasm_intnum_is_zero(yasm_intnum *intn)
    cdef int yasm_intnum_is_pos1(yasm_intnum *intn)
    cdef int yasm_intnum_is_neg1(yasm_intnum *intn)
    cdef int yasm_intnum_sign(yasm_intnum *intn)
    cdef unsigned int yasm_intnum_get_uint(yasm_intnum *intn)
    cdef int yasm_intnum_get_int(yasm_intnum *intn)
    cdef void yasm_intnum_get_sized(yasm_intnum *intn, unsigned char *ptr,
            size_t destsize, size_t valsize, int shift, int bigendian,
            int warn, size_t line)
    cdef int yasm_intnum_check_size(yasm_intnum *intn, size_t size,
            size_t rshift, int rangetype)
    cdef size_t yasm_intnum_get_leb128(yasm_intnum *intn,
            unsigned char *ptr, int sign)
    cdef size_t yasm_intnum_size_leb128(yasm_intnum *intn, int sign)
    cdef size_t yasm_get_sleb128(int v, unsigned char *ptr)
    cdef size_t yasm_size_sleb128(int v)
    cdef size_t yasm_get_uleb128(unsigned int v, unsigned char *ptr)
    cdef size_t yasm_size_uleb128(unsigned int v)
    cdef void yasm_intnum_print(yasm_intnum *intn, FILE *f)

    # libyasm/floatnum.h
    cdef void yasm_floatnum_initialize()
    cdef void yasm_floatnum_cleanup()
    cdef yasm_floatnum* yasm_floatnum_create(char *str)
    cdef yasm_floatnum* yasm_floatnum_copy(yasm_floatnum *flt)
    cdef void yasm_floatnum_destroy(yasm_floatnum *flt)
    cdef void yasm_floatnum_calc(yasm_floatnum *acc, yasm_expr_op op,
            yasm_floatnum *operand, size_t line)
    cdef int yasm_floatnum_get_int(yasm_floatnum *flt, size_t *ret_val)
    cdef int yasm_floatnum_get_sized(yasm_floatnum *flt, unsigned char *ptr,
            size_t destsize, size_t valsize, size_t shift, int
            bigendian, int warn, size_t line)
    cdef int yasm_floatnum_check_size(yasm_floatnum *flt, size_t size)
    cdef void yasm_floatnum_print(yasm_floatnum *flt, FILE *f)

    # libyasm/symrec.h
    ctypedef int(*yasm_symtab_traverse_callback)(yasm_symrec *sym, void *d)
    ctypedef yasm_bytecode *yasm_symrec_get_label_bytecodep

    cdef yasm_symtab* yasm_symtab_create()
    cdef void yasm_symtab_destroy(yasm_symtab *symtab)
    cdef yasm_symrec* yasm_symtab_use(yasm_symtab *symtab, char *name,
            size_t line)
    cdef yasm_symrec* yasm_symtab_get(yasm_symtab *symtab, char *name)
    cdef yasm_symrec* yasm_symtab_define_equ(yasm_symtab *symtab,
            char *name, yasm_expr *e, size_t line)
    cdef yasm_symrec* yasm_symtab_define_label(yasm_symtab *symtab,
            char *name, yasm_bytecode *precbc, int in_table, size_t line)
    cdef yasm_symrec* yasm_symtab_define_label2(char *name,
            yasm_bytecode *precbc, int in_table, size_t line)
    cdef yasm_symrec* yasm_symtab_define_special(yasm_symtab *symtab,
            char *name, yasm_sym_vis vis)
    cdef yasm_symrec* yasm_symtab_declare(yasm_symtab *symtab,
            char *name, yasm_sym_vis vis, size_t line)
    cdef void yasm_symrec_declare(yasm_symrec *symrec, yasm_sym_vis vis,
            size_t line)
    cdef int yasm_symtab_traverse(yasm_symtab *symtab, void *d,
            yasm_symtab_traverse_callback func)
    cdef void yasm_symtab_parser_finalize(yasm_symtab *symtab,
            int undef_extern, yasm_objfmt *objfmt)
    cdef void yasm_symtab_print(yasm_symtab *symtab, FILE *f, int indent_level)
